添加样式参数

--- a/src/app/normalChartDemo/normalChartDemo.component.html
+++ b/src/app/normalChartDemo/normalChartDemo.component.html
@@ -1,4 +1,4 @@
-<kux-normal-chart [chartOptions]="chartOptions" [chartTheme]="chartTheme">
+<kux-normal-chart [chartOptions]="chartOptions" [chartTheme]="chartTheme" [wrapperClass]="'chart-wrapper'" [wrapperStyle]="wrapperStyle">
 </kux-normal-chart>
 <kux-normal-chart [chartOptions]="mapOptions" [mapData]="mapData" [chartType]="'map'" ></kux-normal-chart>
 <!--<kux-normal-chart></kux-normal-chart>-->
